# mods

./: .gitignore  README.md  SConstruct  affine.cc  affine.cpp  affine.h  common.cc  common.cpp  common.hh  common.hpp  config_iter_wxbs.ini  configuration.hpp  correspondencebank.cc  correspondencebank.cpp  correspondencebank.h  correspondencebank.hh  correspondencebank.hpp  desc.hh  descriptors_parameters.hpp  detectors_parameters.hpp  helpers.cpp  helpers.h  imagerepresentation.cc  imagerepresentation.cpp  imagerepresentation.h  imagerepresentation.hh  imagerepresentation.hpp  io_mods.cpp  io_mods.h  license.txt  matching.cc  matching.cpp  matching.hh  matching.hpp  mods.cpp  pixel_desc.hpp  pixelsdesc.hpp  pyramid.cc  pyramid.cpp  pyramid.h  (+16 more)
USAC/: CMakeLists.txt  license.txt  readme.txt
USAC/src/config/: ConfigParams.cpp  ConfigParams.h  ConfigParamsFundmatrix.cpp  ConfigParamsHomog.cpp
USAC/src/estimators/: FundmatrixEstimator.h  HomogEstimator.h  USAC.h
USAC/src/utils/: FundmatrixFunctions.cpp
app/: configuration.hpp  io_mods.cpp  io_mods.h  mods.cpp
detectors/affinedetectors/: CMakeLists.txt  affine.cpp  affine.h  pyramid.cpp  pyramid.h  scale-space-detector.cpp  scale-space-detector.hpp
detectors/mser/: README
detectors/mser/extrema/: extrema.cpp  extrema.h  extremaParams.h  extremaTypes.h  libExtrema.h
mser/extrema/: extrema.cpp  extrema.h  extremaTypes.h  getExtrema.h  libExtrema.h  optThresh.cpp  preprocess.cpp  preprocess.h
samples/: config_iter_cviu.ini  config_iter_wxbs.ini  iters_cviu.ini  iters_wxbs.ini  log.txt  log_gt  run_mods.sh
